found_bugs/kotlin/2/compiler_output
program.kt:1:15: error: type expected
val b = 98 < (if (("bar" > "foo")) 5 else 1)
              ^
program.kt:1:17: error: expecting comma or ')'
val b = 98 < (if (("bar" > "foo")) 5 else 1)
                ^
program.kt:1:18: error: expecting ')'
val b = 98 < (if (("bar" > "foo")) 5 else 1)
                 ^
program.kt:1:19: error: expecting '->' to specify return type of a function type
val b = 98 < (if (("bar" > "foo")) 5 else 1)
                  ^
program.kt:1:20: error: type expected
val b = 98 < (if (("bar" > "foo")) 5 else 1)
                   ^
program.kt:1:21: error: expecting comma or ')'
val b = 98 < (if (("bar" > "foo")) 5 else 1)
                    ^
program.kt:1:21: error: expecting ')'
val b = 98 < (if (("bar" > "foo")) 5 else 1)
                    ^
program.kt:1:24: error: expecting '->' to specify return type of a function type
val b = 98 < (if (("bar" > "foo")) 5 else 1)
                       ^
program.kt:1:26: error: type expected
val b = 98 < (if (("bar" > "foo")) 5 else 1)
                         ^
program.kt:1:28: error: property getter or setter expected
val b = 98 < (if (("bar" > "foo")) 5 else 1)
                           ^
program.kt:1:9: error: expression '98' of type 'Int' cannot be invoked as a function. The function 'invoke()' is not found
val b = 98 < (if (("bar" > "foo")) 5 else 1)

